<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/menu_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home_black_24dp"/>
        <item android:id="@+id/menu_favorite"
            android:title="@string/favorite"
            android:icon="@drawable/ic_favorite_grey_800_24dp"/>
    </group>

    <item android:title="Категория">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_hotel"
                    android:title="@string/hotel"
                    android:icon="@drawable/ic_local_hotel_black_24dp"/>
                <item
                    android:id="@+id/menu_food"
                    android:title="@string/food"
                    android:icon="@drawable/ic_local_pizza_black_24dp"/>
                <item
                    android:id="@+id/menu_atm"
                    android:title="@string/atm"
                    android:icon="@drawable/ic_local_atm_black_24dp"/>
                <item
                    android:id="@+id/menu_bank"
                    android:title="@string/bank"
                    android:icon="@drawable/ic_account_balance_black_24dp"/>
                <item
                    android:id="@+id/menu_restaurant"
                    android:title="@string/restaurant"
                    android:icon="@drawable/ic_restaurant_black_24dp"/>
                <item
                    android:id="@+id/menu_hostel"
                    android:title="@string/hostel"
                    android:icon="@drawable/ic_local_hotel_black_24dp"/>
                <item
                    android:id="@+id/menu_medical"
                    android:title="@string/medical"
                    android:icon="@drawable/ic_local_hospital_black_24dp"/>
                <item
                    android:id="@+id/menu_bar"
                    android:title="@string/bar"
                    android:icon="@drawable/ic_local_bar_black_24dp"/>
            </group>
        </menu>
    </item>
</menu>